--- a/index.html
+++ b/index.html
@@ -117,9 +117,15 @@
      <h2 style="text-decoration: underline;">Papers/Ideas presented :</h2>
      <ul>
 
-         <li>Presented a paper “Decentralization in Blockchain Technology” at  kongu Engineering college</li>
+         <li>Presented a paper “Decentralization in Blockchain Technology” and won 2nd prize at  kongu Engineering college</li>
          <li>Presented an idea of “Health Care Management System" at Kongu Engineering College</li>
          
+     </ul>
+     <h2 style="text-decoration: underline;">membership :</h2>
+     <ul>
+         <li>Executive member of RVCC</li>
+         <li>Member of CSI</li>
+         <li>Member of EPRC</li>
      </ul>
      
 </fieldset>
