--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <style>
             
     *{
-        font-family: sans-serif;
-        margin: 20px;
+        font-family: algerian;
+        margin: 30px;
     }
     h2{
-        color: rgb(187, 92, 24);
+        color: rgb(170, 85, 24);
     }
     body{
         background-color: rgb(228, 252, 247);
@@ -126,7 +126,13 @@
         <li>Address :   2/821-K,Sri Venkatesa Nagar,Meenakshi Nagar(East),
             Kanakkampalayam(po),Perumanallur,Tiruppur-641666.</li>
     </ul>
-   
+   <h1 style="text-align: center; text-decoration: underline;" >RESUME</h1>
+
+    <div style="margin-left:30px">
+    <h2>Contact info:</h2>
+    <p><strong>Name :</strong> Priyadharshini.M</p>
+    <p><strong>Phone:</strong> 9629993448</p>
+    <p><strong>Email:</strong> priyamanoharan0302@gmail.com</p>
 
      
 </fieldset>
